--- a/main.css
+++ b/main.css
@@ -33,3 +33,10 @@ body {
 	display: grid;
 	grid-template-rows: 10% 10%;
 }
+
+#chatBox {
+	text-align: left;
+	position: fixed;
+	bottom: 0;
+	left: 0;
+}
