--- a/main.css
+++ b/main.css
@@ -1,6 +1,5 @@
 * { 
 	font-size: 100%; 
-	text-align: center;
 	font-family: Arial, Helvetica, sans-serif;
 
 }
@@ -34,9 +33,34 @@ body {
 	grid-template-rows: 10% 10%;
 }
 
+#nameInput {
+	text-align: center;
+}
+
+/* Chat styling */
 #chatBox {
 	text-align: left;
 	position: fixed;
 	bottom: 0;
 	left: 0;
+	height: 30vh;
+	width: 30vw;
+	background-color: rgba(10,10,100,0.5);
+	color: #e0e0e0;
+	font-weight: bold;
+	padding-top: 5px;
+}
+#chatFeed {
+	height: 80%;
+	overflow: scroll;
+	padding: 10px;
+	box-sizing: border-box;
+}
+#chatInput {
+	height: 20%;
+	width:100%;
+	box-sizing: border-box;
+	padding: 10px;
+	color: green;
+	border: none;
 }
