--- a/main.css
+++ b/main.css
@@ -48,12 +48,12 @@ body {
 	width: 30vw;
 	background-color: rgba(10,10,100,0.5);
 	color: #e0e0e0;
-	font-weight: bold;
 	padding-top: 5px;
 }
 #chatFeed {
 	height: 80%;
-	overflow: scroll;
+	overflow: hidden;
+	list-style: none;
 	padding: 10px;
 	box-sizing: border-box;
 }
